<resources>
    <string name="app_name">GrowingTree</string>
    <string name="title_activity_login">Login</string>
    <string name="phone_hint_activity_login">Please enter the mobile phone number</string>
    <string name="password_hint_activity_login">Please enter the password</string>
    <string name="forgot_pass_activity_login">Forget Password</string>
    <string name="forgot_pass_under_line_activity_login"><u>Forget Password</u></string>
    <string name="register_user_activity_login"><u>New User Registration</u></string>
    <string name="title_activity_register">Registration</string>
    <string name="phone_hint_activity_register">Please enter the mobile phone number</string>
    <string name="check_code_activity_register">Verification code</string>
    <string name="get_check_code_activity_register">Get verification code</string>
    <string name="phone_num">Mobile phone number</string>
    <string name="title_activity_retrieve_password">Retrieve Password</string>
    <string name="title_activity_modify_username">Change Phone</string>
    <string name="old_phone_hint_activity_modify_username">Please enter the old mobile phone number</string>
    <string name="new_phone_hint_activity_modify_username">Please enter the new mobile phone number</string>
    <string name="password_hint_activity_modify_username">Please enter the password</string>
    <string name="title_activity_add_baby">Add Baby</string>
    <string name="next_step">Next step</string>
    <string name="nav_title_baby">Baby</string>
    <string name="nav_title_curve">Curve</string>
    <string name="nav_title_milestone">Milestone</string>
    <string name="nav_title_mine">Mine</string>
    <string name="title_curve">Curve</string>
    <string name="curve_limit_line_table">Current</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="head_circumference">HC</string>
    <string name="bmi">BMI</string>
    <string-array name="suggestion_height">
        <item>* Height is obviously too short: There may be illness or feeding problems. If you confirm the accuracy of the measurement and filling in the value, please consult a doctor in time to find out the reason and intervene as soon as possible.</item>
        <item>* Height is short：If the baby\'s growth curve is stable, then don\'t worry too much, pay attention to ensure the baby\'s sleep and nutrition intake in life, and continue to pay attention to the baby\'s growth curve changes. If the baby\'s growth curve is suddenly downward, then you need to check for disease or feeding problems, it is recommended to consult a professional doctor in time.</item>
        <item>* Height is normal：Baby is healthy!</item>
        <item>* Height is high：If the baby\'s growth curve is stable, then don\'t worry too much, pay attention to the control of the baby\'s nutrition intake, exercise, and continue to pay attention to the baby\'s growth curve changes. If the baby\'s growth curve is suddenly upward, then it is necessary to check for disease or feeding problems, it is recommended to consult a professional doctor in time.</item>
        <item>* Height is significantly high：There may be illness or feeding problems. If you confirm the accuracy of the measurement and filling in the value, please consult a doctor in time to find out the reason and intervene as soon as possible.</item>
    </string-array>
    <string-array name="suggestion_weight">
        <item>* Weight is obviously too light：There may be illness or feeding problems. If you confirm the accuracy of the measurement and filling in the value, please consult a doctor in time to find out the reason and intervene as soon as possible.</item>
        <item>* Weight is light：If the baby\'s growth curve is stable, then don\'t worry too much, pay attention to ensure the baby\'s sleep and nutrition intake in life, and continue to pay attention to the baby\'s growth curve changes. If the baby\'s growth curve is suddenly downward, then you need to check for disease or feeding problems, it is recommended to consult a professional doctor in time.</item>
        <item>* Weight is normal：Baby is healthy!</item>
        <item>* Weight is heavy：If the baby\'s growth curve is stable, then don\'t worry too much, pay attention to the control of the baby\'s nutrition intake, exercise, and continue to pay attention to the baby\'s growth curve changes. If the baby\'s growth curve is suddenly upward, then it is necessary to check for disease or feeding problems, it is recommended to consult a professional doctor in time.</item>
        <item>* Overweight：There may be illness or feeding problems. If you confirm the accuracy of the measurement and filling in the value, please consult a doctor in time to find out the reason and intervene as soon as possible.</item>
    </string-array>
    <string-array name="suggestion_Head_circle">
        <item>* Head circumference is too small：If you confirm the accuracy of the measurement and filling in the value, please consult a doctor in time to find out the reason and intervene as soon as possible.</item>
        <item>* Head circumference is small：Regular measurement is recommended to continue to observe whether the curve is stable. If the trend is stable, don\'t worry too much, every baby has its own growth pattern. If the curve drops suddenly, you should consult a professional doctor in time.</item>
        <item>* Head circumference is normal: Baby is healthy!</item>
        <item>* Head circumference is big：Regular measurement is recommended to continue to observe whether the curve is stable. If the trend is stable, don\'t worry too much, every baby has its own growth pattern. If there is a sudden increase in the curve, you should consult a professional doctor in time.</item>
        <item>* Head circumference is too big：If you confirm the accuracy of the measurement and filling in the value, please consult a doctor in time to find out the reason and intervene as soon as possible.</item>
    </string-array>
    <string-array name="suggestion_bmi">
        <item>* BMI is normal：Baby is healthy!</item>
        <item>* BMI is normal：Baby is healthy!</item>
        <item>* BMI is normal: Baby is healthy!</item>
        <item>* BMI shows overweight：Baby is likely to be at risk of being overweight. You should pay attention to control the baby\'s diet in life, let the baby more exercise, at the same time continue to pay attention to the baby growth curve change and consult your doctor in time.</item>
        <item>* BMI shows overweight：Baby is likely to be at risk of being overweight. You should pay attention to control the baby\'s diet in life, let the baby more exercise, at the same time continue to pay attention to the baby growth curve change and consult your doctor in time.</item>
    </string-array>
    <string-array name="first_events">
        <item>Smile for the first time</item>
        <item>Eat biscuits for the first time</item>
        <item>Sit without support for the first time</item>
        <item>Stand with assistance for the first time</item>
        <item>Crawl for the first time</item>
        <item>Walk with assistance for the first time</item>
        <item>Call Mom for the first time</item>
        <item>Call dad for the first time</item>
        <item>Stand alone for the first time</item>
        <item>Walk alone for the first time</item>
    </string-array>
    <string-array name="first_smile">
        <item>* 【Normal】With the growth of the baby\'s age, gradually parents and the baby will have regular interaction, such as the smile game. If the baby is happy, then he or she will dance, shake limbs, or even utter a babbling or joyful scream. So parents might as well take advantage of the baby happy time to make some more interaction with the baby, which is also conducive to the development of the baby\'s big movements.</item>
        <item>* 【Delayed】Your baby\'s first smile should occur between 1 and 3 months of age, and there is no need to worry if it is delayed. However, you should consult a doctor if multiple age-appropriate milestones are not reached or delayed for a long time.</item>
    </string-array>
    <string-array name="first_eat_biscuits">
        <item>* 【Normal】Parents should try to choose biscuits specially designed for the baby to avoid excessive oil, sugar and food additives. Baby must not lie down when eating biscuits, must maintain a sitting position to avoid choking, and parents must be in the side monitoring. However, it is important to note that biscuits as snacks should not be given to the baby to eat too much, so as not to develop bad eating habits.</item>
        <item>* 【Delayed】Your baby\'s first eat biscuits should occur between 7 and 9 months of age, and there is no need to worry if it is delayed. However, you should consult a doctor if multiple age-appropriate milestones are not reached or delayed for a long time.</item>
    </string-array>
    <string-array name="first_sit_self">
        <item>* 【Normal】Tips of encouraging your baby to practice sitting skills: put your baby down in a sitting position and support his waist as he tries to balance; let your baby back against the pillow or sit in a corner of a sofa to help him keep balance; put a playful object above your baby\'s head to attract attention and guide him to look up so he can stand up straight.</item>
        <item>* 【Delayed】Your baby\'s first sit without support should occur between 3 and 9 months of age, and there is no need to worry if it is delayed. However, you should consult a doctor if multiple age-appropriate milestones are not reached or delayed for a long time.</item>
    </string-array>
    <string-array name="first_crawl">
        <item>* 【Normal】In the real crawling, baby is crawling with hands and knees, head and neck up, chest and abdomen leave the surface of the bed. Crawling to the baby is a very beneficial movement, not only can exercise the strength of the baby\'s whole body muscles and coordination ability, but also can enhance the cerebellum balance sense, to the baby in the future learning language and reading have a good impact. Therefore, mom and dad must help the baby to complete the crawling movement.</item>
        <item>* 【Delayed】Your baby\'s first crawl should occur between 5 and 13 months of age, and there is no need to worry if it is delayed. However, you should consult a doctor if multiple age-appropriate milestones are not reached or delayed for a long time.</item>
    </string-array>
    <string-array name="first_stand_up">
        <item>* 【Normal】Parents can use the following method to help the baby practice standing: teach the baby to raise the body on both hands from the prone position, then kneel up on both legs, climb up, grasp the railing to stand up; use both hands to support the baby under his armpits and let him practice standing. When the baby\'s stand with two hands assistance more stable, parents can train one-hand assistance station, the other hand to get the toy.</item>
        <item>* 【Delayed】Your baby\'s first stand with assistance should occur between 4 and 11 months of age, and there is no need to worry if it is delayed. However, you should consult a doctor if multiple age-appropriate milestones are not reached or delayed for a long time.</item>
    </string-array>
</resources>