<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_curve"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:background="@drawable/baseline_add_black_24"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="visible">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_circumference" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi" />
    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_chart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:text="Height(cm)"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="8dp"
                    android:text="WHO"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:switchPadding="2dp" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_china"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Nine-city"
                        android:textSize="11sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_who"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="WHO"
                        android:textSize="11sp" />

                </RadioGroup>

            </FrameLayout>

            <com.viadroid.app.growingtree.view.LineChartInViewPager
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="200dp"
                android:orientation="vertical"
                android:paddingBottom="48dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="#ccc"
                    android:gravity="top"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Evaluation and Recommendation:"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_suggestions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="首先爸妈需要注意的是，生长曲线并不是只有一条，而是会有很多条不同分位的曲线，生长曲线参考的百分位曲线通常包括5%、10%、25%、50%、75%、90%、95%这几条，每条曲线都有对应不同的身体指标。" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>